 $Id: ChangeLog,v 1.131.2.25.2.137.2.19 2010/12/24 04:21:04 uehira Exp $

2010-12-24  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 2.1.19 released.
	* src/win.c : avoid 0 byte malloc request in map mode.

2010-12-23  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Explicitly specify array bounds.

2010-12-22  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/win_xmalloc.c : added.
	malloc() --> win_xmalloc() or MALLOC()
	realloc() --> win_xrealloc() or REALLOC()
	calloc() --> win_xcalloc() or CALLOC().
	free() --> win_xfree() or FREE().
	* src/winlib.c : added get_sysch_mon().
	* src/winadd.c : added -M option.

2010-12-21  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Renamed 'wconst.h' to 'w_const.h'.
	* Renamed 'wmacros.h' to 'w_macros.h'.
	* Renamed 'wproto.h' to 'w_proto.h'.
	* Renamed 'wstruct.h' to 'w_struct.h'.
	* Renamed 'daily_rawdiff' to 'daily_windiff'.

2010-12-10  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/winpickfile.c : fixed a potential bug.
	* src/Makefile.am : libwinsystem.so (revision number: 1:1:1)

2010-12-09  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* compatibility for DESTDIR option.
	* configure.in : portable sh script.

2010-12-08  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 2.1.18 released.
	* imported win pickfile related libraries.
	* src/winpickfile.[ch] : added.
	* src/Makefile.am : libwinsystem.so (bump current & age number: 1:0:1)

2010-12-07  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* realloc() memory leak check.
	* src/Makefile.am : libwinsystem.so (bump revision number: 0:1:0)

2010-12-03  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 2.1.17 released.
	* added substitution functions :
	  src/fileblocks.c, src/memcmp.c, src/malloc.c, src/realloc.c

2010-11-26  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 2.1.16 released.
	* src/winlib.c : check system type using AC_CHECK_SIZEOF.
	* configure.in : for cross-compile (Linux)

2010-11-25  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>