@@ -3,7 +3,7 @@
 * 90.6.9 -      (C) Urabe Taku / All Rights Reserved.           *
 ****************************************************************/
 /* 
-   $Id: win.c,v 1.46.2.6.2.35.2.7 2010/12/24 04:16:32 uehira Exp $
+   $Id: win.c,v 1.46.2.6.2.35.2.8 2010/12/28 02:37:23 uehira Exp $
 
    High Samping rate
      9/12/96 read_one_sec 
@@ -23,10 +23,10 @@
 #else
 #define NAME_PRG      "win32"
 #endif
-#define WIN_VERSION   "2010.12.24(+Hi-net) (SEVO)"
+#define WIN_VERSION   "2010.12.28(+Hi-net) (SEVO)"
 
 static const char rcsid[] =
-  "$Id: win.c,v 1.46.2.6.2.35.2.7 2010/12/24 04:16:32 uehira Exp $";
+  "$Id: win.c,v 1.46.2.6.2.35.2.8 2010/12/28 02:37:23 uehira Exp $";
 
 #define DEBUG_AP      0   /* for debugging auto-pick */
 /* 5:sr, 4:ch, 3:sec, 2:find_pick, 1:all */
@@ -2511,7 +2511,9 @@ just_map:
   else alat0=100.0;
 
   /* initialize station table "ft.stn" */
-  if (!map_only) {  /* ft.n_ch = 0 */
+  /* printf("%d  %d\n", sizeof(*ft.stn), ft.n_ch); */
+  ft.stn=NULL;
+  if (!map_only && !just_hypo) { /* ft.n_ch = 0 */
     if((ft.stn=(struct Stn *)win_xmalloc(sizeof(*ft.stn)*ft.n_ch))==NULL)
       emalloc("ft.stn");
     for(i=0;i<ft.n_ch;i++)
